--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "yaml": "^2.3.3"
   },
   "devDependencies": {
+    "@octokit/types": "^12.1.1",
     "@types/node": "^20.8.7",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.52.0",
