--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: 'ERElli'
 inputs:
   repo-token:
     description: 'The GitHub token used to manage labels'
-    required: false
+    required: true
     default: ${{ github.token }}
   config-path:
     description: 'The path for the label configurations'
