--- a/.github/edit-pr.yml
+++ b/.github/edit-pr.yml
@@ -2,4 +2,7 @@ titleTagConfig:
   tags: 
     - octokit: "src/octokit/**"
     - utils: "src/utils/**"
+    - extra:
+      - "src/utils/**"
+      - "src/octokit/**""
   tagWrappers: "[]"
