fix typo in config

--- a/.github/edit-pr.yml
+++ b/.github/edit-pr.yml
@@ -4,5 +4,5 @@ titleTagConfig:
     - utils: "src/utils/**"
     - extra:
       - "src/utils/**"
-      - "src/octokit/**""
+      - "src/octokit/**"
   tagWrappers: "[]"
