--- a/.github/edit-pr.yml
+++ b/.github/edit-pr.yml
@@ -2,7 +2,7 @@ titleTagConfig:
   tags: 
     - octokit: "src/octokit/**"
     - utils: "src/utils/**"
-    - extra:
+    - both:
       - "src/utils/**"
       - "src/octokit/**"
   tagWrappers: "[]"
