Docs and renaming

--- a/.github/edit-pr.yml
+++ b/.github/edit-pr.yml
@@ -1,8 +1,6 @@
 titleTagConfig:
   tags: 
     - octokit: "src/octokit/**"
-    - utils: "src/utils/**"
-    - both:
+    - utils:
       - "src/utils/**"
-      - "src/octokit/**"
   tagWrappers: "[]"
