--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   },
   "author": "ERElli",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "minimatch": "^9.0.3",
-    "yaml": "^2.3.3"
-  },
-  "devDependencies": {
     "@octokit/types": "^12.1.1",
     "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.52.0",
-    "typescript": "^5.2.2"
+    "eslint": "^8.53.0",
+    "minimatch": "^9.0.3",
+    "typescript": "^5.2.2",
+    "yaml": "^2.3.3"
   }
 }
