--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,21 +17,9 @@
 		"@typescript-eslint"
 	],
 	"rules": {
-		"indent": [
-			"error",
-			"tab"
-		],
-		"linebreak-style": [
-			"error",
-			"unix"
-		],
-		"quotes": [
-			"error",
-			"single"
-		],
-		"semi": [
-			"error",
-			"always"
-		]
+		"indent": ["error", "tab"],
+		"quotes": ["error", "single"],
+		"semi": ["error", "always"],
+		"comma-dangle": ["error", "always-multiline"]
 	}
 }
