--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,46 @@
 {
-	"env": {
-		"browser": true,
-		"es2021": true
-	},
+	"env": {"es2021": true},
 	"extends": [
 		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended-type-checked",
+		"plugin:@typescript-eslint/stylistic-type-checked",
+		"plugin:import/recommended",
+		"plugin:import/typescript"
 	],
 	"ignorePatterns": ["dist/**"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
-		"sourceType": "module"
+		"sourceType": "module",
+		"project": true,
+		"tsconfigRootDir": "."
 	},
 	"plugins": [
-		"@typescript-eslint"
+		"@typescript-eslint",
+		"import"
 	],
 	"rules": {
+		"@typescript-eslint/array-type": ["error", {"default": "generic"}],
+		"comma-dangle": ["error", "always-multiline"],
+		"import/no-useless-path-segments": ["error", {"noUselessIndex": true}],
+		"import/order": ["error"],
 		"indent": ["error", "tab"],
+		"object-curly-spacing": ["error", "never"],
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
-		"comma-dangle": ["error", "always-multiline"]
+		"sort-imports": ["error", {
+			"ignoreCase": true,
+			"ignoreMemberSort": false,
+			"memberSyntaxSortOrder": ["all", "multiple", "single", "none"]
+		}]
+	},
+	"settings": {
+		"import/parsers": {
+			"@typescript-eslint/parser": [".ts"]
+		},
+		"import/resolver": {
+			"typescript": true,
+			"node": true
+		}
 	}
 }
