--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@typescript-eslint/parser": "^6.10.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.53.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
     "minimatch": "^9.0.3",
     "typescript": "^5.2.2",
     "yaml": "^2.3.3"
