--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "Github action to update a pull-request",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/index.ts"
+    "build": "ncc build src/index.ts -m"
   },
   "author": "ERElli",
   "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0"
-  },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/types": "^12.1.1",
+    "@types/node": "^20.8.7",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.52.0",
-    "typescript": "^5.2.2"
+    "eslint": "^8.53.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "minimatch": "^9.0.3",
+    "typescript": "^5.2.2",
+    "yaml": "^2.3.3"
   }
 }
