--- a/.github/edit-pr.yml
+++ b/.github/edit-pr.yml
@@ -2,4 +2,5 @@ titleTagConfig:
   tags: 
     - octokit: "src/octokit/**"
     - utils: "src/utils/**"
+    - titleTag: "src/features/titleTag/**"
   tagWrappers: "[]"
