--- a/action.yml
+++ b/action.yml
@@ -2,20 +2,17 @@ name: 'PR Editor'
 description: 'A github action to edit pull requests'
 author: 'ERElli'
 inputs:
-  repo-token:
+  githubToken:
     description: 'The GitHub token used to manage labels'
     required: true
     default: ${{ github.token }}
-  config-path:
-    description: 'The path for the label configurations'
+  configPath:
+    description: 'The path from the root of your repository to the config file'
+    required: true
     default: '.github/edit-pr.yml'
-    required: false
-  pr-number:
+  prNumber:
     description: 'The pull request number'
     required: true
-outputs:
-  pr-title:
-    description: 'The updated pull request title'
 runs:
   using: 'node20'
   main: 'dist/index.js'
