--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,8 @@
 		"skipLibCheck": true,
 		"newLine": "lf"
 	},
-	"exclude": ["./dist", "./node_modules"]
+	"exclude": [
+		"./dist",
+		"./node_modules"
+	]
 }
